--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,5 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -21,13 +14,24 @@
 }
 
 body {
-  min-width: 100wv;
+  min-width: 100vw;
   min-height: 100vh;
+  background-image: url("./assets/background.jpg");
+  backdrop-filter: blur(15px);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: grid;
+  grid-template-columns: 1fr min(1200px, 90%) 1fr;
+  grid-template-rows: 1fr min(90%) 1fr;
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
+body > * {
+  grid-column: 2;
+  grid-row: 2;
+}
+
+#root {
+  border-radius: 30px;
+  background-color: rgba(255, 255, 255, 0.5);
 }
