--- a/src/index.css
+++ b/src/index.css
@@ -34,4 +34,6 @@ body > * {
 #root {
   border-radius: 30px;
   background-color: rgba(255, 255, 255, 0.5);
+  display: flex;
+  position: relative;
 }
